--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="icon" type="image/png" href="Images/logo.png" />
     </head>
     <body>
+        <main>
         <header id="main">
             <div class="flex-container">
                 <a href="index.html">
@@ -33,7 +34,7 @@
                 </a>
             </div>
         </header>
-        <main>
+        <!-- <main> -->
             <div class="logo-container">
                 <img class="logo" src="Images/logo.png" />
                 <p class="frontpage-text">
