--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div id="links-page1">
                 <div class="flex-container">
                     <div class="socials">
-                        <a href="mailto:sharpsolutionsdev@gmail.com" target="_blank"><img class="contact-image" src="Images/bubbles.png" /></a>
+                        <a class = "socials"  href="mailto:sharpsolutionsdev@gmail.com" target="_blank"><img class="contact-image" src="Images/bubbles.png" /></a>
                         <div>
                             <ul>
                                 <li>Professional/spotless finish</li>
