--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <title>Wishy Washy 🫧</title>
         <link rel="stylesheet" href="styles.css" />
-        <link rel="JavaScript" href="script.js" />
+        <script src="script.js" defer></script>
         <link rel="icon" type="image/png" href="Images/logo.png" />
     </head>
     <body>
         <header id="main">
             <div class="flex-container">
-                <a href="index.html">
+                <a href="https://www.wishywashychester.com">
                     <div class="icon-container facebook">
                         <img class="social-icon" src="Images/facebook.png" alt="Facebook" />
                     </div>
