--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             <div class="logo-container">
                 <img class="logo" src="Images/logo.png" />
                 <p class="frontpage-text">
-                    Premium Car Care at your doorstep <br />
-                    <span style="color: #00c1ff;">Launching soon in Chester! Stay tuned for updates...</span>
+                    Premium Affordable Car Care at your doorstep <br />
+                    <span style="color: #00c1ff;">Launching soon in Chester...</span>
                 </p>
             </div>
             <div id="links-page1">
@@ -82,10 +82,10 @@
                             <div class="contact-info">
                                 <div class="contact-details">
                                     <h2>Get in Touch</h2>
-                                    <p>Email: <a href="mailto:wishywashy@gmail.com">wishywashy@gmail.com</a></p>
-                                    <p>Phone: +44 7538 957865</p>
+                                    <p>Email: <a href="mailto:wishywashychcw@gmail.com" class = "email-hov">wishywashychcw@gmail.com</a></p>
+                                    <p>Phone: <a class="email-hov" href="https://wa.me/447538957865" >+44 7538 957865</a></p>
                                     <p>Address: Chester Based</p>
-                                    <p>Business Hours: Mon-Fri, 9:00 AM - 5:00 PM</p>
+                                    <p>Business Hours: Mon-Fri, 9:00 AM - 6:00 PM</p>
                                     <img id="logo-contact" src="Images/logo.png" />
                                 </div>
                                 <div class="map">
@@ -104,7 +104,7 @@
                         </section>
                     </div>
                     <div class="contact-form">
-                        <h2 id="send_a_msg" class="con-header">Send Us a Message</h2>
+                        <h2 id="send_a_msg" class="con-header">Send Us an Enquiry</h2>
                         <form id="form" action="https://formsubmit.co/419e844b7d00d9b8bf78b959eb2d4c11" method="POST">
                             <label for="name">Full Name:</label>
                             <input type="text" id="name" name="name" placeholder="Enter your full name" required />
@@ -204,7 +204,7 @@
                             <div class="filledbar"></div>
                         </div>
                         <div class="review">
-                            <p class="quote">"Was curious to see if the products were any good, was suprosed to see proffesinal products used."</p>
+                            <p class="quote">"Was curious to see if the products were any good, and was shocked by the high quality"</p>
                             <div class="stars">
                                 <span class="star">&#9733;</span>
                                 <span class="star">&#9733;</span>
@@ -245,16 +245,16 @@
                         <div class="footer-links">
                             <h3>Quick Links</h3>
                             <ul>
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="projects.html">Email</a></li>
-                                <li><a href="services.html">Whatsapp</a></li>
-                                <li><a href="contact.html">Contact</a></li>
+                                <li><a href="wishywashychester.com">Home</a></li>
+                                <li><a href="mailto:wishywashychcw@gmail.com">Email</a></li>
+                                <li><a  href="https://wa.me/447538957865">Whatsapp</a></li>
+                                <li><a  href="#send_a_msg">Contact</a></li>
                             </ul>
                         </div>
                         <div class="footer-contact">
                             <h3>Contact Us</h3>
-                            <p>Email: <a>wishywashy@gmail.com</a></p>
-                            <p>Phone: <a>+44 7538 957865</a></p>
+                            <p>Email: <a class="email-hov footer" href="mailto:wishywashychcw@gmail.com">wishywashychcw@gmail.com</a></p>
+                            <p>Phone: <a href="https://wa.me/447538957865" class="email-hov footer">+44 7538 957865</a></p>
                             <p>Address: Chester Based</p>
                         </div>
                     </div>
@@ -264,7 +264,7 @@
                 </footer>
             </div>
         </main>
-        <a href="https://calendly.com/sharpsolutionsdev/30min" target="_blank" class="book-now-btn">Book Now</a>
+        <a href="https://wa.me/447538957865" target="_blank" class="book-now-btn">Book Now</a>
         <script src="script.js"></script>
     </body>
 </html>
