--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                         <div class="footer-links">
                             <h3>Quick Links</h3>
                             <ul>
-                                <li><a href="wishywashychester.com">Home</a></li>
+                                <li><a href="https://wishywashychester.com/">Home</a></li>
                                 <li><a href="mailto:wishywashychcw@gmail.com">Email</a></li>
                                 <li><a  href="https://wa.me/447538957865">Whatsapp</a></li>
                                 <li><a  href="#send_a_msg">Contact</a></li>
